# slidecheck

./: .dockerignore  .gitignore  Dockerfile  OVERVIEW.md  README.md  SLIDECHECK_IMPROVEMENTS.md  fly.toml  pyproject.toml  requirements.txt
.github/workflows/: build-windows.yml
api/: index.py
docs/superpowers/plans/: 2026-06-23-slidecheck.md  2026-06-25-slidecheck-interactive-remediation.md  2026-06-25-slidecheck-web-app.md
docs/superpowers/specs/: 2026-06-23-slidecheck-design.md  2026-06-25-slidecheck-interactive-remediation-design.md  2026-06-25-slidecheck-web-app-design.md
packaging/: build-windows.md  slidecheck.spec
pptx_a11y/: alt_text_ai.py  analyze.py  appliers.py  cli.py  color.py  gui.py  imageutil.py  loader.py  models.py  pipeline.py  refs.py  settings.py  standards.py  textutil.py
pptx_a11y/checks/: __init__.py  alt_text.py  contrast.py  font_size.py  link_text.py  media_captions.py  metadata.py  motion.py  reading_order.py  sensory.py  slide_titles.py  tables.py  use_of_color.py
pptx_a11y/fixers/: __init__.py  alt_text.py  metadata.py  slide_titles.py
pptx_a11y/report/: __init__.py  batch_index.py  html_report.py  json_report.py
pptx_a11y/web/: __init__.py  analyze_service.py  describers.py  export_service.py  service.py
public/: app.js  index.html  styles.css
tests/: test_alt_text_ai.py  test_analyze.py  test_appliers.py  test_cli.py  test_color.py  test_group_recursion.py  test_gui.py  test_loader.py  test_models.py  test_pipeline.py  test_refs.py  test_settings.py  test_standards.py
tests/checks/: test_alt_text.py  test_contrast.py  test_font_size.py  test_link_text.py  test_metadata.py  test_motion.py  test_reading_order.py  test_sensory.py  test_slide_titles.py  test_tables.py  test_use_of_color.py
tests/fixers/: test_alt_text_fixer.py  test_titles_metadata_fixers.py
tests/fixtures/: build.py
tests/report/: test_batch_index.py  test_reports.py
tests/web/: test_analyze_service.py  test_api.py  test_describers.py  test_export_service.py  test_service.py
