[project]
name = "slidecheck"
version = "0.1.0"
authors = [
    { name = "ajaiupadhyaya", email = "ajaiupadhyaya@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.111.0",
    "pillow>=12.2.0",
    "python-pptx>=1.0.2",
    "tkinterdnd2>=0.5.0",
]

[project.scripts]
slidecheck = "pptx_a11y.cli:main"
slidecheck-gui = "pptx_a11y.gui:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
