[project]
name = "slidecheck"
version = "0.3.0"
authors = [
    { name = "ajaiupadhyaya", email = "ajaiupadhyaya@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.111.0",
    "pillow>=12.2.0",
    "python-pptx>=1.0.2",
    "tkinterdnd2>=0.5.0",
]

[project.scripts]
slidecheck = "pptx_a11y.cli:main"
slidecheck-gui = "pptx_a11y.gui:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pptx_a11y*"]

[dependency-groups]
dev = [
    "fastapi>=0.138.1",
    "httpx>=0.28.1",
    "pyinstaller>=6.21.0",
    "pytest>=9.1.1",
    "python-multipart>=0.0.9",
    "uvicorn>=0.49.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
filterwarnings = [
    # starlette 1.3.x deprecates httpx inside its TestClient (test-only; not used in
    # the deployed app). Suppress just this third-party StarletteDeprecationWarning to
    # keep output clean — matched narrowly by message so unrelated warnings are unaffected.
    "ignore:Using `httpx` with `starlette.testclient` is deprecated:Warning",
]
